all_files = files(
    'EOSConnect/Config.vala',
    'EOSConnect/Contact.vala',
    'EOSConnect/ContactsInterface.vala',
    'EOSConnect/Contractor.vala',
    'EOSConnect/EContacts.vala',
    'EOSConnect/EOSConnect.vala',
    'EOSConnect/DebugToolbar.vala',
    'EOSConnect/MainWindow.vala',
    'EOSConnect/Plugin/Battery.vala',
    'EOSConnect/Plugin/Dialogs/NotificationSettings.vala',
    'EOSConnect/Plugin/Dialogs/ShareFileInfoProgress.vala',
    'EOSConnect/Plugin/Notification.vala',
    'EOSConnect/Plugin/Ping.vala',
    'EOSConnect/Plugin/PluginInterface.vala',
    'EOSConnect/Plugin/Popover/BatterySettings.vala',
    'EOSConnect/Plugin/Popover/ShareSettings.vala',
    'EOSConnect/Plugin/Popover/SMSNewMessageNewContact.vala',
    'EOSConnect/Plugin/Popover/TelephonySettings.vala',
    'EOSConnect/Plugin/Share.vala',
    'EOSConnect/Plugin/SMS.vala',
    'EOSConnect/Plugin/SMSContact.vala',
    'EOSConnect/Plugin/SMSStore.vala',
    'EOSConnect/Plugin/SMSStoreFactory.vala',
    'EOSConnect/Plugin/SMSStoreInterface.vala',
    'EOSConnect/Plugin/SMSStoreSQLite.vala',
    'EOSConnect/Plugin/SMSStoreTemp.vala',
    'EOSConnect/Plugin/Telephony.vala',
    'EOSConnect/Plugin/Views/SMSMessagesView.vala',
    'EOSConnect/Plugin/Widgets/PingPluginListBoxRow.vala',
    'EOSConnect/Plugin/Widgets/BatteryPluginListBoxRow.vala',
    'EOSConnect/Plugin/Widgets/SMSContactListBox.vala',
    'EOSConnect/Plugin/Widgets/SMSContactListBoxRow.vala',
    'EOSConnect/Plugin/Widgets/SMSTextEntry.vala',
    'EOSConnect/Plugin/Widgets/TelephonyPluginListBoxRow.vala',
    'EOSConnect/Plugin/Windows/SMSHistory.vala',
    'EOSConnect/Tools.vala',
    'EOSConnect/Views/DevicesView.vala',
    'EOSConnect/Views/DeviceSettingsView.vala',
    'EOSConnect/Views/MainSettingsView.vala',
    'EOSConnect/Widgets/DeviceListActionBarFooter.vala',
    'EOSConnect/Widgets/DeviceListBox.vala',
    'EOSConnect/Widgets/DeviceListBoxRow.vala',
    'EOSConnect/Widgets/DeviceMenuitem.vala',
    'EOSConnect/Widgets/PluginListBox.vala',
    'EOSConnect/Widgets/PluginListBoxRow.vala',
    # 'EOSConnect/Wingpanel/Indicator.vala',
    # 'MConnect/Config.vala',
    'MConnect/BatteryHandler.vala',
    'MConnect/Core.vala',
    'MConnect/Crypt.vala',
    'MConnect/DBusNotificationsInterface.vala',
    'MConnect/Device.vala',
    'MConnect/DeviceManager.vala',
    'MConnect/DeviceChannel.vala',
    'MConnect/Discovery.vala',
    'MConnect/DiscoveredDevice.vala',
    'MConnect/DownloadTransfer.vala',
    'MConnect/IOCopyJob.vala',
    'MConnect/MConnectThread.vala',
    'MConnect/Notification.vala',
    'MConnect/NotificationHandler.vala',
    'MConnect/NotificationMonitor.vala',
    'MConnect/Packet.vala',
    'MConnect/PacketHandlerInterface.vala',
    'MConnect/PacketHandlers.vala',
    'MConnect/PingHandler.vala',
    'MConnect/ShareHandler.vala',
    'MConnect/ShareHandlerProxy.vala',
    'MConnect/TelephonyHandler.vala',
    'MConnect/TransferInterface.vala',
    'MConnect/TransferManager.vala',
    'MConnect/UploadTransfer.vala',
    'MConnect/Utils.vala',
)

executable(
    meson.project_name(),
    all_files,
    #css_gresource,
    #icons_gresource,
    dependencies: dependencies,
    #vala_args: args,
    install: true
)

dep_wingpanel = dependency('wingpanel-2.0')

# as_resources = gnome.compile_resources(
#     'as-resources', 'data/io.elementary.wingpanel.nightlight.gresource.xml',
#     source_dir: 'data',
#     c_name: 'as'
# )

# pkg-config  wingpanel-2.0 --variable=indicatorsdir
# ls -lh /usr/lib/x86_64-linux-gnu/wingpanel

shared_module(
    meson.project_name(),
    'EOSConnect/Wingpanel/Indicator.vala',
    # 'src/Services/ColorInterface.vala',
    # 'src/Widgets/PopoverWidget.vala',
    # 'src/Widgets/RevealerSwitch.vala',
    # as_resources,
    dependencies: [
        dependency('glib-2.0'),
        dependency('gobject-2.0'),
        dependency('granite'),
        dependency('gtk+-3.0'),
        dep_wingpanel
    ],
    install: true,
    install_dir : dep_wingpanel.get_pkgconfig_variable('indicatorsdir')
)
